# chess_game

./: .gitignore  README.md
chess_game/: CMakeLists.txt  build.sh  result.txt
chess_game/include/: check_figure.h  end_game.h  figure_finder.h  figure_finder_col.h  generate_field.h  knight.h  main.h  place_pieces.h  print_field.h  queen.h  read_input.h  rook.h  validate_move.h  write_to_file.h
chess_game/src/: check_figure.c  end_game.c  figure_finder.c  figure_finder_col.c  generate_field.c  is_empty.c  knight.c  main.c  place_pieces.c  print_field.c  queen.c  read_input.c  rook.c  validate_move.c  write_to_file.c
